tests/regression/error/hw4_error22.nex
var i; var j; var b;
j = none;
i = 3;
b = j > i;
